// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Body Shop Theme it should match The Body Shop Dark theme snapshot: The Body Shop Dark Theme 1`] = `
Object {
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "iconSizes": Object {
    "huge": 144,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227BBD",
      },
      "filledWarning": Object {
        "backgroundColor": "#FCC433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#FAFAFA",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227BBD",
        },
        "borderColor": "#227BBD",
        "color": "#FAFAFA",
      },
      "outlinedSuccess": Object {
        "color": "#FAFAFA",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#FCC433",
        },
        "borderColor": "#FCC433",
        "color": "#FAFAFA",
      },
      "root": Object {
        "fontSize": "1rem",
        "fontWeight": 400,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#FAFAFA",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227BBD",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#FAFAFA",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#FAFAFA",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#FCC433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#FAFAFA",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#FAFAFA",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#FFFFFF14",
          "color": "#FFFFFF3D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#FFFFFF3D",
          "color": "#FFFFFF3D",
        },
        "borderColor": "#FFFFFF3D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#FAFAFA",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#FFFFFF3D",
        },
        "color": "#FAFAFA",
      },
      "root": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 40,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 48,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 32,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#FFFFFF3D",
          "color": "#FFFFFF3D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#FFFFFF3D",
          },
          "borderRightColor": "#FFFFFF1F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#FFFFFF3D",
          },
          "borderColor": "#2F837F",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#FFFFFF3D",
          },
          "borderColor": "#A07E65",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#FFFFFF3D",
          },
          "borderRightColor": "#FFFFFF1F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#FFFFFF3D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#FFFFFF3D",
        },
      },
    },
    "MuiChip": Object {
      "clickable": Object {
        "&:focus": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
        "&:hover": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.16)",
        },
      },
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#2F837F",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#2F837F",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "rgba(255, 255, 255, 0.6)",
        },
        "color": "rgba(255, 255, 255, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#FFFFFF",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#FFFFFF",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(255, 255, 255, 0.12)",
        "color": "#FFFFFF",
      },
      "outlinedPrimary": Object {
        "& $avatar": Object {
          "backgroundColor": "#62B3AE",
        },
        "color": "#FFFFFF",
      },
      "outlinedSecondary": Object {
        "& $avatar": Object {
          "backgroundColor": "#D2AD93",
        },
        "color": "#FFFFFF",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(255, 255, 255, 0.24)",
          "color": "#FFFFFF",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(255, 255, 255, 0.12)",
        "color": "#FFFFFF",
        "fontSize": "0.875rem",
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#333333",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#62B3AE",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormHelperText": Object {
      "root": Object {
        "&.Mui-error": Object {
          "color": "#BBBBBB",
        },
      },
    },
    "MuiFormLabel": Object {
      "formControl": Object {
        "transform": "none",
      },
      "root": Object {
        "&.Mui-error": Object {
          "color": "#FAFAFA",
        },
        "&.Mui-focused": Object {
          "color": "#BBBBBB",
          "fontSize": "0.875rem",
        },
        "fontSize": "0.875rem",
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#FAFAFA",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "input": Object {
        "&.Mui-disabled": Object {
          "opacity": 0.24,
        },
        "color": "#FAFAFA",
      },
      "root": Object {
        "&.Mui-focused:not(.MuiError):not(.MuiSuccess)": Object {
          "boxShadow": "#62B3AE 0 0 0 2px",
        },
        "&.MuiError": Object {
          "&.Mui-focused": Object {
            "boxShadow": "#E74627 0 0 0 2px",
          },
          "&:hover": Object {
            "boxShadow": "#BBBBBB 0 0 0 1px",
          },
          "boxShadow": "#E74627 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#BBBBBB 0 0 0 1px",
          },
          "boxShadow": "#FAFAFA 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiSuccess": Object {
          "&.Mui-focused": Object {
            "boxShadow": "#569A32 0 0 0 1px",
          },
          "&:hover": Object {
            "boxShadow": "#BBBBBB 0 0 0 1px",
          },
          "boxShadow": "#569A32 0 0 0 1px",
        },
        "&:hover": Object {
          "boxShadow": "#BBBBBB 0 0 0 1px",
        },
        "&:hover.Mui-disabled": Object {
          "boxShadow": "#777777 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#777777 0 0 0 1px",
        "color": "#FAFAFA",
        "padding": "12px",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "background": "rgba(210, 173, 147, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(250, 250, 250, 0.16)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#777777",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiSvgIcon": Object {
      "root": Object {
        "fill": "#BBBBBB",
      },
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#121212",
      "defaultContrastText": "#FFFFFF",
      "paper": "#333333",
      "paperContrastText": "#FFFFFF",
    },
    "complementary": Object {
      "highlight": "#FFFFFF",
      "link": "#227BBD",
      "linkContrastText": "#FFFFFF",
      "warning": "#FCC433",
      "warningContrastText": "#000000",
    },
    "error": Object {
      "contrastText": "#FFFFFF",
      "main": "#E74627",
    },
    "primary": Object {
      "contrastText": "#000000",
      "dark": "#2F837F",
      "light": "#94E5E0",
      "main": "#62B3AE",
    },
    "secondary": Object {
      "contrastText": "#000000",
      "dark": "#A07E65",
      "light": "#FFDFC4",
      "main": "#D2AD93",
    },
    "success": Object {
      "contrastText": "#FFFFFF",
      "main": "#569A32",
    },
    "text": Object {
      "disabled": "#777777",
      "hint": "#777777",
      "primary": "#FAFAFA",
      "secondary": "#BBBBBB",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.16)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.16)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.16)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.16)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.16)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.16)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.16)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.16)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.16)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.16)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "body2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 400,
    },
    "button": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
    "caption": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": "6rem",
      "fontWeight": 400,
    },
    "h2": Object {
      "fontSize": "3.75rem",
      "fontWeight": 400,
    },
    "h3": Object {
      "fontSize": "3rem",
      "fontWeight": 400,
    },
    "h4": Object {
      "fontSize": "2.125rem",
      "fontWeight": 400,
    },
    "h5": Object {
      "fontSize": "1.5rem",
      "fontWeight": 400,
    },
    "h6": Object {
      "fontSize": "1.25rem",
      "fontWeight": 500,
    },
    "overline": Object {
      "fontSize": "0.75rem",
      "fontWeight": 500,
    },
    "subtitle1": Object {
      "fontSize": "1rem",
      "fontWeight": 500,
    },
    "subtitle2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
  },
}
`;

exports[`The Body Shop Theme it should match The Body Shop Light theme snapshot: The Body Shop Light Theme 1`] = `
Object {
  "avatarSizes": Object {
    "huge": Object {
      "fontSize": "1.5rem",
      "size": 80,
    },
    "large": Object {
      "fontSize": "1rem",
      "size": 48,
    },
    "small": Object {
      "fontSize": ".875rem",
      "size": 32,
    },
    "standard": Object {
      "fontSize": "1rem",
      "size": 40,
    },
    "tiny": Object {
      "fontSize": ".625rem",
      "size": 24,
    },
  },
  "buttonSizes": Object {
    "large": Object {
      "height": 48,
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
    },
    "medium": Object {
      "height": 40,
      "paddingBottom": 0,
      "paddingLeft": 12,
      "paddingRight": 12,
      "paddingTop": 0,
    },
    "small": Object {
      "height": 32,
      "paddingBottom": 0,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 0,
    },
  },
  "iconSizes": Object {
    "huge": 144,
    "hugex": 192,
    "hugexx": 256,
    "large": 72,
    "largex": 96,
    "largexx": 128,
    "medium": 64,
    "micro": 16,
    "small": 32,
    "standard": 48,
    "tiny": 24,
  },
  "overrides": Object {
    "MuiAlert": Object {
      "filledInfo": Object {
        "backgroundColor": "#227BBD",
      },
      "filledWarning": Object {
        "backgroundColor": "#FCC433",
        "color": "#333333",
      },
      "icon": Object {
        "marginRight": 8,
      },
      "message": Object {
        "padding": "5px 0",
      },
      "outlinedError": Object {
        "color": "#333333",
      },
      "outlinedInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227BBD",
        },
        "borderColor": "#227BBD",
        "color": "#333333",
      },
      "outlinedSuccess": Object {
        "color": "#333333",
      },
      "outlinedWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#FCC433",
        },
        "borderColor": "#FCC433",
        "color": "#333333",
      },
      "root": Object {
        "fontSize": "1rem",
        "fontWeight": 400,
        "padding": 16,
        "width": 278,
      },
      "standardError": Object {
        "backgroundColor": "rgba(231, 70, 39, 0.16)",
        "color": "#333333",
      },
      "standardInfo": Object {
        "& .MuiAlert-icon": Object {
          "color": "#227BBD",
        },
        "backgroundColor": "rgba(34, 123, 189, 0.16)",
        "color": "#333333",
      },
      "standardSuccess": Object {
        "backgroundColor": "rgba(86, 154, 50, 0.16)",
        "color": "#333333",
      },
      "standardWarning": Object {
        "& .MuiAlert-icon": Object {
          "color": "#FCC433",
        },
        "backgroundColor": "rgba(252, 196, 51, 0.16)",
        "color": "#333333",
      },
    },
    "MuiAlertTitle": Object {
      "root": Object {
        "fontSize": "1.25rem",
        "fontWeight": 500,
      },
    },
    "MuiAvatar": Object {
      "colorDefault": Object {
        "color": "#333333",
      },
    },
    "MuiBadge": Object {
      "badge": Object {
        "padding": "0 4px",
      },
    },
    "MuiButton": Object {
      "contained": Object {
        "&.Mui-disabled": Object {
          "backgroundColor": "#00000014",
          "color": "#0000003D",
        },
      },
      "outlined": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "borderColor": "#0000003D",
        "padding": null,
      },
      "outlinedPrimary": Object {
        "color": "#333333",
      },
      "outlinedSecondary": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
        "color": "#333333",
      },
      "root": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 40,
        "paddingBottom": 0,
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingTop": 0,
      },
      "sizeLarge": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 48,
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
      },
      "sizeSmall": Object {
        "fontSize": "0.875rem",
        "fontWeight": 500,
        "height": 32,
        "paddingBottom": 0,
        "paddingLeft": 8,
        "paddingRight": 8,
        "paddingTop": 0,
      },
      "text": Object {
        "&.Mui-disabled": Object {
          "borderColor": "#0000003D",
          "color": "#0000003D",
        },
        "padding": null,
      },
    },
    "MuiButtonGroup": Object {
      "groupedContainedHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedContainedPrimary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#001D10",
        },
      },
      "groupedContainedSecondary": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderColor": "#73342A",
        },
      },
      "groupedTextHorizontal": Object {
        "&:not(:last-child)": Object {
          "&.Mui-disabled": Object {
            "borderColor": "#0000003D",
          },
          "borderRightColor": "#0000001F",
        },
      },
      "groupedTextPrimary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
      "groupedTextSecondary": Object {
        "&:not(:last-child).Mui-disabled": Object {
          "borderColor": "#0000003D",
        },
      },
    },
    "MuiChip": Object {
      "clickableColorPrimary": Object {
        "&:hover": Object {
          "backgroundColor": "#004236",
        },
      },
      "clickableColorSecondary": Object {
        "&:hover": Object {
          "backgroundColor": "#A55F53",
        },
      },
      "deleteIcon": Object {
        "&:hover": Object {
          "color": "#000000",
        },
        "color": "rgba(0, 0, 0, 0.8)",
        "fontSize": "24px",
        "height": "24px",
        "width": "24px",
      },
      "deleteIconColorPrimary": Object {
        "&:hover": Object {
          "color": "#FFFFFF",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconColorSecondary": Object {
        "&:hover": Object {
          "color": "#FFFFFF",
        },
        "color": "rgba(255, 255, 255, 0.8)",
      },
      "deleteIconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "width": "16px",
      },
      "icon": Object {
        "fontSize": "24px",
      },
      "iconSmall": Object {
        "fontSize": "16px",
        "height": "16px",
        "marginTop": "1px",
        "width": "16px",
      },
      "outlined": Object {
        "borderColor": "rgba(0, 0, 0, 0.12)",
        "color": "#000000",
      },
      "outlinedPrimary": Object {
        "color": "#000000",
      },
      "outlinedSecondary": Object {
        "color": "#000000",
      },
      "root": Object {
        "& $avatar": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.24)",
          "color": "#333333",
        },
        "&$disabled": Object {
          "opacity": 0.4,
        },
        "backgroundColor": "rgba(0, 0, 0, 0.12)",
        "color": "#333333",
        "fontSize": "0.875rem",
      },
    },
    "MuiExpansionPanel": Object {
      "root": Object {
        "&$disabled": Object {
          "backgroundColor": "#FFFFFF",
          "opacity": 0.32,
        },
        "&$expanded": Object {
          "borderColor": "#004236",
        },
        "border": "transparent 1px solid",
      },
    },
    "MuiExpansionPanelSummary": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 1,
        },
        "alignItems": "flex-start",
        "marginTop": "8px",
      },
    },
    "MuiFormLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
      "root": Object {
        "&.Mui-error": Object {
          "color": "#E74627",
        },
        "&.Mui-focused": Object {
          "color": "#777777",
          "fontSize": "0.875rem",
        },
        "fontSize": "0.875rem",
      },
    },
    "MuiIconButton": Object {
      "root": Object {
        "color": "#333333",
        "padding": "8px",
      },
      "sizeSmall": Object {
        "padding": "4px",
      },
    },
    "MuiInputAdornment": Object {
      "positionEnd": Object {
        "marginRight": 8,
      },
      "root": Object {
        "position": "absolute",
        "right": "0",
      },
    },
    "MuiInputBase": Object {
      "input": Object {
        "&.Mui-disabled": Object {
          "opacity": 0.24,
        },
        "color": "#333333",
      },
      "root": Object {
        "&.Mui-focused:not(.MuiError):not(.MuiSuccess)": Object {
          "boxShadow": "#004236 0 0 0 2px",
        },
        "&.MuiError": Object {
          "&.Mui-focused": Object {
            "boxShadow": "#E74627 0 0 0 2px",
          },
          "&:hover": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#E74627 0 0 0 2px",
        },
        "&.MuiFilled:not(.Mui-focused)": Object {
          "&:hover": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#333333 0 0 0 1px",
        },
        "&.MuiInput-underline.Mui-disabled:before": Object {
          "borderBottomStyle": "none",
        },
        "&.MuiInput-underline:after": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:before": Object {
          "borderBottom": "none",
        },
        "&.MuiInput-underline:hover:not(.Mui-disabled):before": Object {
          "borderBottom": "none",
        },
        "&.MuiSuccess": Object {
          "&.Mui-focused": Object {
            "boxShadow": "#569A32 0 0 0 1px",
          },
          "&:hover": Object {
            "boxShadow": "#777777 0 0 0 1px",
          },
          "boxShadow": "#569A32 0 0 0 1px",
        },
        "&:hover": Object {
          "boxShadow": "#777777 0 0 0 1px",
        },
        "&:hover.Mui-disabled": Object {
          "boxShadow": "#BBBBBB 0 0 0 1px",
        },
        "borderRadius": "4px",
        "boxShadow": "#BBBBBB 0 0 0 1px",
        "color": "#333333",
        "padding": "12px",
      },
    },
    "MuiInputLabel": Object {
      "formControl": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
      "shrink": Object {
        "marginTop": "-4px",
        "transform": "none",
      },
    },
    "MuiListItem": Object {
      "button": Object {
        "&:hover": Object {
          "backgroundColor": "rgba(0, 0, 0, 0.04)",
        },
      },
      "gutters": Object {
        "&:focus": Object {
          "outline": "none",
        },
      },
      "root": Object {
        "&$selected": Object {
          "&:focus": Object {
            "outline": "none",
          },
          "&:hover": Object {
            "backgroundColor": "rgba(0, 0, 0, 0.04)",
          },
          "backgroundColor": "rgba(165, 95, 83, 0.16)",
        },
        "&.Mui-disabled": Object {
          "opacity": 0.32,
        },
        "&:hover": Object {
          "backgroundColor": "rgba(51, 51, 51, 0.04)",
        },
        "cursor": "pointer",
      },
    },
    "MuiSelect": Object {
      "select": Object {
        "&.Mui-disabled": Object {
          "color": "#BBBBBB",
        },
        "&:focus": Object {
          "backgroundColor": "transparent",
        },
      },
    },
    "MuiSvgIcon": Object {
      "root": Object {},
    },
    "MuiTab": Object {
      "root": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "textColorInherit": Object {
        "&$disabled": Object {
          "opacity": 0.24,
        },
      },
      "wrapper": Object {
        "& > *:first-child": Object {
          "marginBottom": "2px !important",
        },
      },
    },
    "MuiTableSortLabel": Object {
      "icon": Object {
        "marginLeft": 8,
      },
    },
    "MuiTextField": Object {
      "& .MuiInputLabel": Object {
        "marginTop": "20px",
      },
    },
    "MuiToolbar": Object {
      "dense": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "gutters": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
      "regular": Object {
        "@media (min-width: 600px)": Object {
          "minHeight": "56px",
        },
        "minHeight": "56px",
      },
      "root": Object {
        "@media (min-width: 600px)": Object {
          "padding": "0 16px",
        },
        "padding": "0 16px",
      },
    },
  },
  "palette": Object {
    "action": Object {
      "disabled": "rgba(0, 0, 0, 0.24)",
    },
    "background": Object {
      "default": "#FAFAFA",
      "defaultContrastText": "#333333",
      "paper": "#FFFFFF",
      "paperContrastText": "#333333",
    },
    "complementary": Object {
      "highlight": "#000000",
      "link": "#227BBD",
      "linkContrastText": "#FFFFFF",
      "warning": "#FCC433",
      "warningContrastText": "#333333",
    },
    "error": Object {
      "contrastText": "#FFFFFF",
      "main": "#E74627",
    },
    "primary": Object {
      "contrastText": "#FFFFFF",
      "dark": "#001D10",
      "light": "#356D60",
      "main": "#004236",
    },
    "secondary": Object {
      "contrastText": "#FFFFFF",
      "dark": "#73342A",
      "light": "#D98D7F",
      "main": "#A55F53",
    },
    "success": Object {
      "contrastText": "#FFFFFF",
      "main": "#569A32",
    },
    "text": Object {
      "disabled": "#BBBBBB",
      "hint": "#BBBBBB",
      "primary": "#333333",
      "secondary": "#777777",
    },
  },
  "shadows": Object {
    "0": "none",
    "1": "0 1px 1px 0 rgba(0, 0, 0, 0.16)",
    "12": "0 12px 17px 0 rgba(0, 0, 0, 0.16)",
    "16": "0 16px 24px 0 rgba(0, 0, 0, 0.16)",
    "2": "0 2px 2px 0 rgba(0, 0, 0, 0.16)",
    "24": "0 24px 38px 0 rgba(0, 0, 0, 0.16)",
    "3": "0 3px 4px 0 rgba(0, 0, 0, 0.16)",
    "4": "0 4px 5px 0 rgba(0, 0, 0, 0.16)",
    "6": "0 6px 10px 0 rgba(0, 0, 0, 0.16)",
    "8": "0 8px 10px 0 rgba(0, 0, 0, 0.16)",
    "9": "0 9px 12px 0 rgba(0, 0, 0, 0.16)",
  },
  "shape": Object {
    "badgeBorderRadius": 100,
    "borderRadius": 4,
  },
  "sizes": Object {
    "huge": 96,
    "hugeX": 128,
    "hugeXX": 144,
    "hugeXXX": 192,
    "hugex": 128,
    "hugexx": 144,
    "hugexxx": 192,
    "large": 64,
    "largeX": 72,
    "largeXX": 80,
    "largeXXX": 88,
    "largex": 72,
    "largexx": 80,
    "largexxx": 88,
    "medium": 48,
    "mediumX": 56,
    "mediumx": 56,
    "micro": 4,
    "none": 0,
    "semi": 32,
    "semiX": 40,
    "semix": 40,
    "small": 16,
    "standard": 24,
    "tiny": 8,
    "veryHuge": 256,
    "veryhuge": 256,
  },
  "spacing": 8,
  "typography": Object {
    "body1": Object {
      "fontSize": "1rem",
      "fontWeight": 400,
    },
    "body2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 400,
    },
    "button": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
    "caption": Object {
      "fontSize": "0.75rem",
      "fontWeight": 400,
    },
    "fontFamily": "\\"Roboto\\", sans-serif",
    "fontFamilyBrand1": "\\"Helvetica Now Display\\"",
    "fontFamilyBrand2": "\\"Helvetica Now Text\\"",
    "fontFamilyBrand3": null,
    "fontWeightBold": 700,
    "fontWeightLight": 300,
    "fontWeightMedium": 500,
    "fontWeightRegular": 400,
    "h1": Object {
      "fontSize": "6rem",
      "fontWeight": 400,
    },
    "h2": Object {
      "fontSize": "3.75rem",
      "fontWeight": 400,
    },
    "h3": Object {
      "fontSize": "3rem",
      "fontWeight": 400,
    },
    "h4": Object {
      "fontSize": "2.125rem",
      "fontWeight": 400,
    },
    "h5": Object {
      "fontSize": "1.5rem",
      "fontWeight": 400,
    },
    "h6": Object {
      "fontSize": "1.25rem",
      "fontWeight": 500,
    },
    "overline": Object {
      "fontSize": "0.75rem",
      "fontWeight": 500,
    },
    "subtitle1": Object {
      "fontSize": "1rem",
      "fontWeight": 500,
    },
    "subtitle2": Object {
      "fontSize": "0.875rem",
      "fontWeight": 500,
    },
  },
}
`;
